src/main/java/com/example/todo/entity/error/ErrorCode.java
package com.example.todo.entity.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {
    String name();
    HttpStatus getHttpStatus();
    String getMessage();
}
